Organized repos and folders for separate scrapers

--- a/services/scraper-bot/pyproject.toml
+++ b/services/scraper-bot/pyproject.toml
@@ -1,21 +1,29 @@
 [project]
 name = "milkatai-scraper-bot"
 version = "0.1.0"
-description = "Scraper bots for MilkatAI"
+description = "Multi-website scraper for Gujarat government property and land record portals"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-  "beautifulsoup4==4.12.3",
-  "lxml==5.2.2",
-  "requests==2.32.3",
-  "playwright==1.46.0",
-  "pydantic==2.8.2",
-  "python-dotenv==1.0.1",
+    # Web scraping
+    "beautifulsoup4==4.12.3",
+    "lxml==5.2.2",
+    "requests==2.32.3",
+    "playwright==1.46.0",
+    # Data validation
+    "pydantic==2.8.2",
+    # Environment
+    "python-dotenv==1.0.1",
+    # API
+    "fastapi==0.115.0",
+    "uvicorn[standard]==0.30.6",
 ]
+
+[project.scripts]
+scraper-bot = "scraper_bot.cli:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
-
